Delete endpoint added
