# service/people.go
@@ -48,7 +48,7 @@ func ShowFamily(c *gin.Context){
 }
 
 // @Summary CreatePerson() Create a new person
-// @Description Insert a new person into the database, and you can create a new family tree with this person
+// @Description Insert a new person into the database, and you can create a new family tree with this person. You can also update some person, you just have to input the ID following by the name you want to update. If you wanna just insert a new name, no needs of insert an ID
 // @Tags Create person
 // @Success 200 {array} models.Person
 // @Failure 404 {object} object
@@ -78,6 +78,39 @@ func CreatePerson(c *gin.Context){
 	}
 
 	c.JSON(200, person)
+}
+
+// @Summary DeletePerson() will delete a person in database
+// @Description will delete a person of the database
+// @Tags Delete a Person
+// @Success 200 {object} models.Person
+// @Failure 404 {object} object
+// @Router /v1/person [delete]
+func DeletePerson(person *gin.Context){
+
+	db := database.GetDataBase()
+
+	var personDb models.Person
+
+	err := person.ShouldBindJSON(&personDb)
+
+	if err != nil{
+		person.JSON(400, gin.H{
+			"error": "Something went wrong:" + err.Error(),
+		})
+		return
+	}
+
+	err = db.Delete(&personDb).Error
+
+	if err != nil{
+		person.JSON(400, gin.H{
+			"error": "Person not delete it" + err.Error(),
+		})
+		return
+	}
+	
+	person.JSON(200, personDb)
 }
 
 // @Summary Get all persons of the database
